populate the service cluster ip to the task status when provisioned
